POST route working from frontend (needed to set header content type)

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <form>
+    <form id='enterNameForm'>
         <label for="name">
             Enter your name
             <input  id='userName' name="name" type="text">
@@ -16,7 +16,7 @@
         <button id="submitUserBtn" type="submit">Submit</button>
     </form>
     
-    <div class="wordSearchForm" style="display: none;">
+    <div id="wordSearchForm" style="display: none;">
         <form>
             <label for="word">
                 Enter a Word
